--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,27 +8,55 @@ environment:
 
 dependencies:
   animate_do: ^3.3.4
+  cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
+  dio: ^5.4.3+1
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_native_splash: ^2.4.0
+  flutter_screenutil: ^5.9.3
+  flutter_spinkit: ^5.2.1
+  flutter_svg: ^2.0.10+1
+  get: ^4.6.6
   google_nav_bar: ^5.0.6
+  intl: ^0.19.0
+  location: ^6.0.2
+  logger: ^2.3.0
+  lottie: ^3.1.2
+  pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
+  smooth_page_indicator: ^1.1.0
+  step_progress_indicator: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 
-flutter:
-  uses-material-design: true
-  assets:
-  - assets/
-  
-flutter_native_splash:
+flutter_icons:
   android: true
   ios: true
-  web: false
-  image: assets/splash.png
-  color: "#FFFFFF"
-  android_12:
-    image: assets/splash.png
-    color: "#FFFFFF"
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#6151C3"
+  adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
+
+flutter:
+  uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/vectors/
+    - assets/fonts/
+    - assets/data/
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 300
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 700
